[package]
name = "conman"
version = "0.1.0"
authors = ["Simon Hoxer Bønding <simon@hoxer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rweblet = { git = 'https://github.com/sinb-dev/rweblet' }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs-docker = "0.0.58"